# WebHook_Manager

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pre-commit-config.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 3cd0dbb0eef9_api_key_unique_prefix.py  ae7c0da22271_initial_schema.py  e6e39a93b58d_add_source_secret.py
docs/adr/: 001-fastapi-over-django.md  002-clean-architecture.md  003-celery-for-delivery.md
nginx/conf.d/: default.conf
scripts/: seed_source.py
src/api/: main.py
src/api/middleware/: correlation_id.py  request_logging.py
src/api/routers/: health.py  metrics.py
src/core/: config.py  constants.py  dependencies.py  exceptions.py  logging.py  metrics.py  security.py
src/domain/: enums.py
src/domain/entities/: api_key.py  base.py  delivery.py  endpoint.py  source.py  subscription.py  user.py  webhook_event.py
src/services/: auth_service.py  delivery_service.py  endpoint_service.py  event_service.py  subscription_service.py
src/webhook_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/e2e/: test_api_crud.py  test_idempotency.py  test_webhook_flow.py
tests/integration/: test_endpoint_repository.py
tests/unit/: test_auth_dependency.py  test_circuit_breaker.py  test_delivery_backoff.py  test_delivery_service.py  test_endpoint_service.py  test_event_service.py  test_hmac.py  test_logging.py  test_rate_limit_dependencies.py  test_rate_limiter.py
(+44 files in other folders)
